--- a/TiddlyWiki.html
+++ b/TiddlyWiki.html
@@ -231,6 +231,8 @@ Error message and password prompt
 
 <li>code snippets</li>
 
+<li>cohérence cardiaque +10 QI /5mn</li>
+
 <li>coin magic</li>
 
 <li>Comment parler pour être entendus</li>
@@ -309,6 +311,8 @@ Error message and password prompt
 
 <li>Hypnomachie</li>
 
+<li>Hypnomachie &amp; arme nucléaire</li>
+
 <li>Hypnomachie &amp; pedo</li>
 
 <li>ideas</li>
@@ -366,6 +370,8 @@ Error message and password prompt
 <li>online services</li>
 
 <li>Or</li>
+
+<li>Order of Veiel</li>
 
 <li>organisation</li>
 
@@ -9380,7 +9386,7 @@ Error message and password prompt
 <div created="20190108101211875" modified="20190521145518441" title="$:/state/tab/sidebar--595412856">
 <pre>$:/core/ui/SideBar/More</pre>
 </div>
-<div created="20200207091703241" list="Home PluralSight" modified="20200207091703241" title="$:/StoryList">
+<div created="20200210101936446" list="Home [[current TODO]]" modified="20200210123829522" title="$:/StoryList">
 <pre></pre>
 </div>
 <div created="20190131165140039" modified="20190131165140039" title="$:/temp/advancedsearch">
@@ -9440,8 +9446,8 @@ Error message and password prompt
     }
 }</pre>
 </div>
-<div created="20190114084246125" modified="20200207134317165" title="$:/temp/search">
-<pre>tmpcurrent</pre>
+<div created="20190114084246125" modified="20200210142626657" title="$:/temp/search">
+<pre></pre>
 </div>
 <div created="20190108084849123" modified="20190108084857507" title="$:/theme">
 <pre>$:/themes/tiddlywiki/snowwhite</pre>
@@ -9969,6 +9975,27 @@ You must not project that you are proving anything or the actions, no matter how
 ```
 </pre>
 </div>
+<div created="20200210125319611" modified="20200210132937538" tags="fiche_lecture corda" title="cohérence cardiaque +10 QI /5mn">
+<pre>! but 
+* recentrer le focus (matin)
+* appaiser la fréquence cardiaque &amp; équilibrer le tonus vagual (équilibre système sympatique &amp; parasympathique)
+* https://fr.wikipedia.org/wiki/Syst%C3%A8me_nerveux_parasympathique
+* réduire :
+# hypertension
+# fatigue
+# angoisse
+# pb digestif
+
+! processus : 
+* ''allongé'' sur le dos
+* 1 ''main sur le ventre''
+* inspiration/expiration ''uniquement par le nez''
+* pdt 2 minutes, cycles 4/5/6 :
+# pdt 4 secondes : ''inspiration avec le ventre'' par le nez
+# pdt 5 secondes : blocage (avec petite presssion sur les abdos)
+# pdt 6 secondes : expiration par le nez
+* pdt 3 minutes : idem en 4/5/''7''</pre>
+</div>
 <div created="20190327143035149" modified="20190906124642562" tags="magic coinmagic" title="coin magic">
 <pre>* ''@1'26 -&gt; @1'29 https://www.youtube.com/watch?v=ZQSnMsbcLhI''
 * https://www.youtube.com/watch?v=W1sAkptXwf4
@@ -10378,7 +10405,7 @@ Si vous travaillez suffisamment vous serez en mesure d’accomplir des choses ju
 
 </pre>
 </div>
-<div created="20200207134926654" modified="20200207135814625" tags="todo" title="current TODO">
+<div created="20200207134926654" modified="20200210124053093" tags="todo" title="current TODO">
 <pre>! Daily
 * [[dev responsable]]
 * ''&gt;&gt;&gt;'' [[job hunt]]
@@ -10407,10 +10434,14 @@ Si vous travaillez suffisamment vous serez en mesure d’accomplir des choses ju
 
 ! Buy
 * https://www.jmcorda.com/fr/rituel-du-matin 
-* https://www.jmcorda.com/fr/dominationbylove ''https://www.jmcorda.com/fr/dominationbylove?infos=dbl.x.osef%40xoxy.net%2C5e32d7afd5748%2CZjdkMDM0OTliYzU2MDEwOWNlZjVlM2M1NzNkMDZhMjBjMWViOWRlYQ%3D%3D''
 * https://www.gold.fr/cours-or-prix-de-l-or/napoleon-or-20-francs-louis-or/
 * https://www.gold.fr/comptoirs-achat-vente-or/nantes/
-* https://www.patreon.com/PigCakee</pre>
+* https://www.patreon.com/PigCakee
+
+! search in magic archives
+* SELF-working
+* SPELLbound
+</pre>
 </div>
 <div created="20190529145458196" modified="20190830154142741" tags="spiritualité delavier" title="Delavier &amp; spiritualité">
 <pre>Delavier:
@@ -10958,8 +10989,9 @@ Maintenant, vous voulez en connaître plus sur votre passé.  Et quelque chose v
 encore grâce à &quot;fores.exe&quot;, dans le dossier Fallout 2 \ Resurrection. 
 </pre>
 </div>
-<div created="20200205101551096" modified="20200205101622758" tags="resources" title="ffmpeg">
-<pre>```
+<div created="20200205101551096" modified="20200210122929171" tags="resources" title="ffmpeg">
+<pre>! Transformer vidéo en mp3
+```
 .\ffmpeg.exe -i .\DBL5.mp4 .\DBL5.mp3
 ```
 </pre>
@@ -11041,7 +11073,7 @@ Augustin Barruel - Mémoires pour servir à l'histoire du jacobinisme	https://fr
 * photos ? (big)
 * useful code snippets</pre>
 </div>
-<div created="20190108105358377" modified="20200207135933721" tags="home current" title="Home">
+<div created="20190108105358377" modified="20200210142610860" tags="home current" title="Home">
 <pre>! Daily
 * https://mail.yahoo.com l.d@y
 * https://webmail.ausy.fr sa.le@a.f 1+20
@@ -11053,10 +11085,13 @@ Augustin Barruel - Mémoires pour servir à l'histoire du jacobinisme	https://fr
 ! Weekly
 * https://www.epicgames.com/store/en-US/free-games epicgames.osef.osef@xoxy.net 7/19
 * https://facebook.com/messages l.d@y7+17
+* https://monespace.ausy.fr sa.le@au.f
+* DBL https://www.jmcorda.com/fr/dominationbylove?infos=dbl.x.osef%40xoxy.net%2C5e32d7afd5748%2CZjdkMDM0OTliYzU2MDEwOWNlZjVlM2M1NzNkMDZhMjBjMWViOWRlYQ%3D%3D
 
 ! Skank
 * https://sebsauvage.net/links/
 * https://www.youtube.com/feed/subscriptions osfgrrla 5+19
+* https://www.facebook.com/Hypnomachie/posts/
 * https://danstonchat.com/latest.html
 
 ! Ressources
@@ -11065,6 +11100,7 @@ Augustin Barruel - Mémoires pour servir à l'histoire du jacobinisme	https://fr
 * https://filebin.net/slemoine
 * https://github.com/lenopgm
 * http://leno.1fr1.net/
+* https://chatons.org/fr/find
 
 ! encours
 * https://m.ing.fr/secure/login/cif 1332108
@@ -11205,7 +11241,7 @@ https://www.youtube.com/watch?v=5MgBikgcWnY
 
 The major barrier isn't intellectual. It's emotional.</pre>
 </div>
-<div created="20190927134431065" modified="20200123155915715" tags="fiche_lecture" title="Hypnomachie">
+<div created="20190927134431065" modified="20200210103906379" tags="fiche_lecture hypnomachie" title="Hypnomachie">
 <pre>pré-rationnel -&gt; rationnel -&gt; trans-rationnel
 
 trans-rationnel = on garde la méthode scientifique, et on cherche à accepter rationnellement l'irrationnel
@@ -11430,7 +11466,28 @@ Comme disait Ayn Rand
 
 &quot;Votre peur de la mort n'est pas un amour de la Vie&quot;</pre>
 </div>
-<div created="20190830154756419" modified="20190830154831001" tags="pedo fiche_lecture" title="Hypnomachie &amp; pedo">
+<div created="20200210103922415" modified="20200210103938119" tags="hypnomachie" title="Hypnomachie &amp; arme nucléaire">
+<pre> Conflit mimétique appliqué à l'argumentation.
+
+Nous en parlions récemment : l'Etat souhaite trouver sa justification dans le fait de contenir une certaine forme de violence.
+Comme tout collectif basé sur une logique sacrificielle, il génère de puissantes antitélies, parmi elles, l'arme nucléaire.
+
+L'arme nucléaire est censé permettre un pouvoir dissuasif dans le cadre des rapports de forces entres nations.
+Paradoxalement, en une frappe, elle peut anéantir plus d'individus qu'un état n'aura jamais protégé de par son existence.
+Si l'on laissais les etres humains disposer de leurs souveraineté, bien peu accepteraient de financer ce type d'armes sur leurs deniers propres.
+Cela n'est que parce que nous disposons de cette structure indirecte qu'une telle atrocité peut encore etre financée.
+
+C'est l'archétype, en psychologie, d'une stratégie dysfonctionnelle qui consiste à amasser beaucoup de ressource en un point du systeme, soi disant pour un but donné mais qui génère une quantité massive d'entropie à terme.
+Dit plus simplement, cette stratégie ne sert que tres modérément la Vie.
+
+Un des meilleurs antidotes face à un envahisseur disposant d'une armée organisée est, paradoxalement, l’absence de structure centralisée comme l'a montré encore l'embourbement américain en Afghanistan (ou, historiquement, indépendance de la suisse).
+Lorsque chaque grand mere peut représenter une menace pour un envahisseur, le ratio cout/bénéfice d'une opération militaire devient vite négatif, provoquant une puissante incitation à la paix.
+D'une défense efficace, cela deviens aussi une façon pertinente de refuser de financer des opérations agressives menées sous la bannière de l'état contre des populations innocentes.
+En outre, cela responsabilise également chacun et l'ancre dans une forme de réalisme qu'il peut avoir tendance à fuir, autrement dit, cela procède d'une certaine forme de maturité.
+
+La pensée gnostique a réussie, comme souvent, à nous faire penser l'inverse même des conséquences logiques des éléments en présence...Alors qu'il ne s'agit en fait que surfer sur nos pulsions grégaires...</pre>
+</div>
+<div created="20190830154756419" modified="20200210103918755" tags="hypnomachie pedo fiche_lecture" title="Hypnomachie &amp; pedo">
 <pre>&lt;&lt;&lt;
 Je ne suis pas sûr que ce soit à quiconque d'autre que nous memes de nous protéger.
 Que des commerciaux mettent des femmes nues pour vendre des yoghourts, c'est leur droit le plus strict.
@@ -11932,6 +11989,80 @@ les maitres de l'ombre
 * https://www.pieces-or.com/1-acheter-piece-boursable-or-Napoleon-20-Francs.html
 NB : Nous vous adresserons un devis séparé pour la livraison. Vous pouvez aussi obtenir une évaluation immédiate aux heures ouvrées en appelant un conseiller au :
 01 42 12 80 84.</pre>
+</div>
+<div created="20200210122011453" modified="20200210122638315" tags="fiche_lecture veiel" title="Order of Veiel">
+<pre>! Les tokens dans la boîte servent à quoi ?
+1 - Chaque jeton sert pour une compétence ou une arme particulière. Les jetons + 2 atk + 2 def servent aux talismans par exemple. Les jetons flammes pour le pyromancien. Les jetons poison pour l'araignée géante et les couteaux empoisonnés.
+
+! Comment je gères les PV des monstres:
+2 - Alors nous personnellement nous utilisons les D6 pour les monstres de bases et les d20 pour les monstres puissants. Nous sommes aussi en train de finaliser une application ODV qui permettra de gérer les pvs des monstres et le donjon.
+
+! Changer d'aile lors de la progression dans le donjon:
+3 - Tu peux te déplacer latéralement tant que tu avances d'une ligne vers le boss ou le fonds. Tu peux tout à fait sauter de l'aile ouest à l'aile Est, cependant le MDD (ou la pile en automatique) pioche une carte évènement supplémentaire à chaque changement d'aile. Tu dois toujours progresser vers le boss.
+
+! Le poison :
+4 - Le poison est appliqué à un joueur dès que celui-ci est touché par une araignée peut importe si il réduit l'entièreté des dommages. Ensuite, à chaque début de son tour, il prendra un nombre de dégâts égal au poison sur lui et cela avant de jouer. La fin du combat dissipe le poison ou la mort ou une graine purificatrice. (Page 16 du manuel)
+
+! Je suis pas sûr d'avoir compris les salles spéciales.
+5 - Les cartes spéciales sont les cartes de salle de boss lié à chacun d'entre eux. &quot;L'antre du flagelleur&quot;, &quot;le royaume des morts&quot;, &quot;le tombeau du roi&quot; et &quot;les profondeurs obscures&quot;. Si tu ne disposes pas de ces cartes, dis-le nous, ca pose soucis dans ce cas.
+
+! Emprisonnement et défenseur :
+6 - Le défenseur est le personnage qui prendra les attaques des monstres au corps à corps, il est symbolisé par le gros jeton défenseur avec un bouclier. Comme marqué sur la carte, si un joueur est emprisonné, il est alors impossible de lui donner le jeton défenseur.
+
+! C'est quoi les malédictions
+7 - Les malédictions sont des événements déclenchés par le MDD ou en automatique lors d'un jet inférieur ou égal à 5. Il y a la malédiction d'attaque, de défense et d'endurance, elles se trouvent toute le paquet carte événement.
+
+
+! Si le MDD possède une carte événement dont l’effet ne peut pas être résolu sur aucun des joueurs, je repioche une carte ?
+Si seulement 😀 Non c’est juste pas de bol.
+
+! Sur la salle spéciale de Talman, les profondeurs obscures, il est noté : “un géant squelette”, de quoi s’agit-il ?
+Il s’agit du “Dernier géant”. C’est une erreur de notre part.
+
+! Lorsque des monstres apparaissent contre Talman ou l’âme du chasseur calciné, peuvent-ils attaquer dès leur arrivée ? Je les rajoutes avant ou après le boss sur le champs de bataille ?
+Oui pour la première. Pour la seconde, dès que des monstres arrivent dans un combat engagé, vous pouvez les placer comme vous le souhaitez.
+
+! Lors d’un affrontement contre Talman, les dégâts des attaques redirigées sont-ils réduits ?
+Oui. En revanche, il faut appliquer uniquement la réduction de Talman.
+
+! Lors d’un affrontement contre le chevalier noir, les attaques ou objets consommables visant tous les monstres ou plusieurs monstres en même temps fonctionnent-ils ?
+Tout à fait. C’est le cas du shrapnel de l’érudit, de la bombe alchimique ect ect.
+
+! Les phylactères sont-ils à usage unique ?
+Non !
+
+! Peut-on passer son tour si l’on ne souhaite rien faire ?
+Tout à fait.
+
+! Peut-on se débarrasser de son arme et n’utiliser que les compétences ?
+Bien sûr. En revanche, il faudra passer son tour si vous n’avez ni arme, ni END, ni objet consommable.
+
+! A quoi servent les jetons dans la boîte du jeu ?
+Chaque jeton sert pour une compétence ou une arme particulière. Les jetons + 2 ATT + 2 DEF servent aux talismans par exemple. Les jetons flammes pour le pyromancien. Les jetons poison pour l’araignée géante et les couteaux empoisonnés ect ect Si vous avez besoin de vous souvenir de quelque chose, il y a un jeton pour ça.
+
+! Vous avez une astuce pour gérer les points de vie des monstres ?
+Nous utilisons les D6 pour les monstres de bases et les d20 ou la fiche de boss pour les monstres puissants. Nous sommes aussi en train de finaliser une application ODV qui permettra de gérer les points de vie des monstres et le donjon.
+
+! Je peux avoir un rappel sur le changement d’aile lors de la progression dans le donjon ?
+Tu peux te déplacer latéralement tant que tu avances d’une ligne vers le boss ou le fonds du donjon. Tu peux tout à fait sauter de l’aile Ouest à l’aile Est. Cependant, le MDD pioche une carte événement supplémentaire à chaque changement d’aile.
+
+! Le poison fait-il son effet si je réduis les dégâts ?
+Le poison est appliqué à un joueur dès que celui-ci est touché par une araignée peu importe si il réduit l’entièreté des points de dégâts classiques. Ensuite, à chaque début de son tour, il prendra un nombre de dégâts égal au poison sur lui et cela avant de jouer. La fin du combat, la mort et une graine purificatrice dissipent le poison. (Page 16 du manuel)
+
+! J’emprisonne le défenseur avec la carte événement, il se passe quoi exactement ?
+Le défenseur est le personnage qui prendra les attaques des monstres au corps à corps, il est symbolisé par le jeton défenseur avec un bouclier. Comme marqué sur la carte, si un joueur est emprisonné, il est alors impossible pour lui d’être le défenseur. Vous devez le passer à un autre joueur.
+
+! C’est quoi les malédictions notées sur les graines purificatrice ?
+Les malédictions sont des événements déclenchés par le MDD. Leurs noms commence par “Malédiction” comme la malédiction d’attaque, de défense et d’endurance.
+
+! Pourquoi j’ai reçu 16 cubes rouges et verts au lieu des 14 notés dans le manuel ?
+Le fournisseur s’est motivé et m’a dit, je cite : C’est plus simple pour nous d’en mettre plus. Donc on va pas se plaindre c’est du bonus !
+
+! Mes cartes phylactères et runes ne correspondent au nombre noté dans le manuel.
+En effet, erratum dans le manuel : “29 phylactères et runes” soit 24 runes et 5 phylactères.
+
+! Au dos du manuel, il est noté que l’on peut payer 3 cristaux pour tirer de nouveau 3 cartes chez le forgeron. Page 8 il est noté 3 cristaux pour 5 cartes, lequel est vrai ?
+C’est effectivement 3 pour 5. On va visiblement loupé le truc.</pre>
 </div>
 <div created="20190301160416840" modified="20190322151401842" tags="improve home todo" title="organisation">
 <pre>* fiches de lecture
