--- a/TiddlyWiki.html
+++ b/TiddlyWiki.html
@@ -9386,7 +9386,7 @@ Error message and password prompt
 <div created="20190108101211875" modified="20190521145518441" title="$:/state/tab/sidebar--595412856">
 <pre>$:/core/ui/SideBar/More</pre>
 </div>
-<div created="20200210101936446" list="Home [[current TODO]]" modified="20200210123829522" title="$:/StoryList">
+<div created="20200210101936446" list="Home [[current TODO]]" modified="20200210144428860" title="$:/StoryList">
 <pre></pre>
 </div>
 <div created="20190131165140039" modified="20190131165140039" title="$:/temp/advancedsearch">
@@ -9446,8 +9446,8 @@ Error message and password prompt
     }
 }</pre>
 </div>
-<div created="20190114084246125" modified="20200210142626657" title="$:/temp/search">
-<pre></pre>
+<div created="20190114084246125" modified="20200210144406872" title="$:/temp/search">
+<pre>pyth</pre>
 </div>
 <div created="20190108084849123" modified="20190108084857507" title="$:/theme">
 <pre>$:/themes/tiddlywiki/snowwhite</pre>
@@ -11073,7 +11073,7 @@ Augustin Barruel - Mémoires pour servir à l'histoire du jacobinisme	https://fr
 * photos ? (big)
 * useful code snippets</pre>
 </div>
-<div created="20190108105358377" modified="20200210142610860" tags="home current" title="Home">
+<div created="20190108105358377" modified="20200210144404509" tags="home current" title="Home">
 <pre>! Daily
 * https://mail.yahoo.com l.d@y
 * https://webmail.ausy.fr sa.le@a.f 1+20
@@ -12476,7 +12476,7 @@ La question est : si à l'intérieur de nos yeux se trouve notre système nerveu
 Et si nos yeux servent à capter les particules de lumière, les photons, pour que notre cerveau puisse se fabriquer l'illusion du monde physique, à quoi sert la captation de la lumière par les trous noirs ?
 </pre>
 </div>
-<div created="20190130144059269" modified="20200206152333105" tags="pw" title="pw">
+<div created="20190130144059269" modified="20200210144244164" tags="pw" title="pw">
 <pre>```
 FREEBOX =&gt; 1/20
 youtube =&gt; osef@grr.la	5/19    cf https://www.guerrillamail.com/fr/inbox?mail_id=476361683
@@ -12535,10 +12535,11 @@ riotgames.net =&gt; lenopgm / groudaf 12/19
 linkedin =&gt; 1/20
 pluralsight =&gt; s.l.y.c 1/20
 interepargne.natixis.fr =&gt; 14290097 [troll]00
+nantesmetropole.fr	metronantes.s.le@x.n	2/20
 ```
 </pre>
 </div>
-<div created="20190212082532922" modified="20191107135317464" tags="dev" title="Python" type="">
+<div created="20190212082532922" modified="20200210144419854" tags="dev" title="Python" type="">
 <pre>* tuto : https://docs.python.org/3.6/tutorial/controlflow.html
 
 * quick &amp; dirty Python programs : https://sebsauvage.net/python/programs.html
@@ -12553,7 +12554,11 @@ interepargne.natixis.fr =&gt; 14290097 [troll]00
 * packaging executable : https://gregoryszorc.com/blog/2019/06/24/building-standalone-python-applications-with-pyoxidizer/
 * virtualenv : http://sametmax.com/les-environnement-virtuels-python-virtualenv-et-virtualenvwrapper/
 
-* https://perso.limsi.fr/pointal/python:accueil</pre>
+* https://perso.limsi.fr/pointal/python:accueil
+
+* https://courspython.com/classes-et-objets.html
+* http://pythontutor.com/visualize.html#mode=display
+</pre>
 </div>
 <div created="20190529145620246" modified="20200203104403534" tags="quotes" title="Quotes, citations">
 <pre>&lt;&lt;&lt;
