--- a/TiddlyWiki.html
+++ b/TiddlyWiki.html
@@ -423,6 +423,8 @@ Error message and password prompt
 
 <li>Todo</li>
 
+<li>Todo RIP</li>
+
 <li>Torrent</li>
 
 <li>Trouver les mots pour parler de sexualité à son ado</li>
@@ -9377,7 +9379,7 @@ Error message and password prompt
 <div created="20190108084835586" modified="20190108084835586" title="$:/state/tab--2112689675">
 <pre>$:/core/ui/ControlPanel/Advanced</pre>
 </div>
-<div created="20190108084833171" modified="20190108105317510" title="$:/state/tab-1749438307">
+<div created="20190108084833171" modified="20200210151117653" title="$:/state/tab-1749438307">
 <pre>$:/core/ui/ControlPanel/Appearance</pre>
 </div>
 <div created="20190108104722609" modified="20191219140245978" title="$:/state/tab/moresidebar-1850697562">
@@ -9386,7 +9388,7 @@ Error message and password prompt
 <div created="20190108101211875" modified="20190521145518441" title="$:/state/tab/sidebar--595412856">
 <pre>$:/core/ui/SideBar/More</pre>
 </div>
-<div created="20200210101936446" list="Home [[current TODO]]" modified="20200210144428860" title="$:/StoryList">
+<div created="20200210101936446" list="Home [[current TODO]]" modified="20200210151056151" title="$:/StoryList">
 <pre></pre>
 </div>
 <div created="20190131165140039" modified="20190131165140039" title="$:/temp/advancedsearch">
@@ -13285,6 +13287,25 @@ Michel Clouscard
 Pierre Kropotkine
 ```
 
+</pre>
+</div>
+<div created="20200210153314644" modified="20200210153352839" tags="todo" title="Todo RIP">
+<pre>! Par delà le bien et le mal - Friedrich Nietzsche
+* https://www.youtube.com/watch?v=8IUbOzMNytY&amp;list=PLZyF3Ade0MYj3UnEfVs0WdtDsHf51-AgU&amp;index=1
+* https://www.youtube.com/watch?v=P6kxYUvLat8&amp;list=PLZyF3Ade0MYj3UnEfVs0WdtDsHf51-AgU&amp;index=2
+* https://www.youtube.com/watch?v=EwupdOpiGOg&amp;list=PLZyF3Ade0MYj3UnEfVs0WdtDsHf51-AgU&amp;index=3
+* https://www.youtube.com/watch?v=IW-7PXQMrhM&amp;list=PLZyF3Ade0MYj3UnEfVs0WdtDsHf51-AgU&amp;index=4
+* https://www.youtube.com/watch?v=IBwkWKeZlLA&amp;list=PLZyF3Ade0MYj3UnEfVs0WdtDsHf51-AgU&amp;index=5
+* https://www.youtube.com/watch?v=GBEAK64zi9Y&amp;list=PLZyF3Ade0MYj3UnEfVs0WdtDsHf51-AgU&amp;index=6
+* https://www.youtube.com/watch?v=nNC04SaQopo&amp;list=PLZyF3Ade0MYj3UnEfVs0WdtDsHf51-AgU&amp;index=7
+! Le gai savoir - Friedrich Nietzsche
+* Le gai savoir : Avant propos									https://www.youtube.com/watch?v=aFORkSKC5pU
+* Le gai savoir : Livre premier - La doctrine du but de la vie	https://www.youtube.com/watch?v=Wt0oWtY8kkE
+* Le gai savoir : Livre deuxième - Pour les réalistes				https://www.youtube.com/watch?v=ASqyzmNRfTo
+* Le gai savoir : Livre troisième - Luttes nouvelles				https://www.youtube.com/watch?v=k1aEFaKWRlo
+* Le gai savoir : Livre quatrième - Pour la nouvelle année		https://www.youtube.com/watch?v=faqHZc7h_9o
+* Le gai savoir : Livre cinquième - Notre sérénité				https://www.youtube.com/watch?v=9Ei71zi4CwU
+* Le gai savoir : Plaisanteries, ruse et vengeance				https://www.youtube.com/watch?v=dbGKfiYl5mg
 </pre>
 </div>
 <div created="20190424130007767" modified="20200130145502392" tags="todo torrent download" title="Torrent">
