--- a/TiddlyWiki.html
+++ b/TiddlyWiki.html
@@ -9388,7 +9388,7 @@ Error message and password prompt
 <div created="20190108101211875" modified="20190521145518441" title="$:/state/tab/sidebar--595412856">
 <pre>$:/core/ui/SideBar/More</pre>
 </div>
-<div created="20200210101936446" list="Home [[current TODO]]" modified="20200210151056151" title="$:/StoryList">
+<div created="20200212094722645" list="ffmpeg Home" modified="20200212153334760" title="$:/StoryList">
 <pre></pre>
 </div>
 <div created="20190131165140039" modified="20190131165140039" title="$:/temp/advancedsearch">
@@ -9448,8 +9448,8 @@ Error message and password prompt
     }
 }</pre>
 </div>
-<div created="20190114084246125" modified="20200210144406872" title="$:/temp/search">
-<pre>pyth</pre>
+<div created="20190114084246125" modified="20200212153333525" title="$:/temp/search">
+<pre>ffm</pre>
 </div>
 <div created="20190108084849123" modified="20190108084857507" title="$:/theme">
 <pre>$:/themes/tiddlywiki/snowwhite</pre>
@@ -9998,7 +9998,7 @@ You must not project that you are proving anything or the actions, no matter how
 # pdt 6 secondes : expiration par le nez
 * pdt 3 minutes : idem en 4/5/''7''</pre>
 </div>
-<div created="20190327143035149" modified="20190906124642562" tags="magic coinmagic" title="coin magic">
+<div created="20190327143035149" modified="20200212104129918" tags="magic coinmagic" title="coin magic">
 <pre>* ''@1'26 -&gt; @1'29 https://www.youtube.com/watch?v=ZQSnMsbcLhI''
 * https://www.youtube.com/watch?v=W1sAkptXwf4
 * https://geniimagazine.com/wiki/index.php?title=Coin_Concealments
@@ -10012,11 +10012,12 @@ You must not project that you are proving anything or the actions, no matter how
 
 
 ! à trouver
+* ''Kim Andersen The Silver Edge''
+* ''NOWHERE by Tri Ryuzaki'' 
+* ''Sylvester Pitch - Dan Sylvester's Inertia Pass Encyclopedia''
+* Greg Wilson : Off the Cuff: A Lecture of Routined Impromptu Magic 
 * Goshman Spellbound
-* Sylvester Pitch - Dan Sylvester's Inertia Pass Encyclopedia
-* NOWHERE by Tri Ryuzaki 
 * Horizon by Ryan Bliss
-* Jay Noblezada - In the Beginning There Were Coins
 *  Al Schneider Magic (book)
 * Marions quick pitch 
 * Marion Boykin Short Pockets / ReViSiTed
@@ -11075,7 +11076,7 @@ Augustin Barruel - Mémoires pour servir à l'histoire du jacobinisme	https://fr
 * photos ? (big)
 * useful code snippets</pre>
 </div>
-<div created="20190108105358377" modified="20200210144404509" tags="home current" title="Home">
+<div created="20190108105358377" modified="20200212145231085" tags="home current" title="Home">
 <pre>! Daily
 * https://mail.yahoo.com l.d@y
 * https://webmail.ausy.fr sa.le@a.f 1+20
@@ -11090,7 +11091,7 @@ Augustin Barruel - Mémoires pour servir à l'histoire du jacobinisme	https://fr
 * https://monespace.ausy.fr sa.le@au.f
 * DBL https://www.jmcorda.com/fr/dominationbylove?infos=dbl.x.osef%40xoxy.net%2C5e32d7afd5748%2CZjdkMDM0OTliYzU2MDEwOWNlZjVlM2M1NzNkMDZhMjBjMWViOWRlYQ%3D%3D
 
-! Skank
+! Slacking
 * https://sebsauvage.net/links/
 * https://www.youtube.com/feed/subscriptions osfgrrla 5+19
 * https://www.facebook.com/Hypnomachie/posts/
@@ -11719,7 +11720,7 @@ I don't know if it's the same as Kaufman's Edge Clip. I looked through his book,
 * http://adrastia.org/
 * https://www.youtube.com/channel/UCprmhr8rfvlFpuSmv-QOEgA/videos</pre>
 </div>
-<div created="20190322143324937" modified="20191213104819347" tags="magic current" title="magic">
+<div created="20190322143324937" modified="20200212103443649" tags="magic current" title="magic">
 <pre>! TODO books
 * By forces unseen: The innovative card magic of Ernest Earick 
 * 
@@ -11734,6 +11735,7 @@ I don't know if it's the same as Kaufman's Edge Clip. I looked through his book,
 
 ! warez
 * ''http://www.magic22.com/''
+* ''http://magic-tricks.ru/alltricks/''
 * https://vminhsang.name.vn/?p=1108
 * https://vminhsang.name.vn/?p=3518 1
 * https://vminhsang.name.vn/?p=3487 2
@@ -11746,7 +11748,6 @@ I don't know if it's the same as Kaufman's Edge Clip. I looked through his book,
 * ''http://freemagicdownload1807.blogspot.com/''
 * ''https://www.reddit.com/r/Premium2FreeDownload/''
 * https://www.dailymotion.com/j1811178/videos?sort=visited
-* http://magic-tricks.ru/alltricks/
 * ''torrent search https://www.btdig.com''
 * DarkHAK Fr  https://www.youtube.com/channel/UCHps7VPmYRBBbvkLLAkv41w
 * Magic Christian : https://www.dailymotion.com/magic-christian/videos
