--- a/TiddlyWiki.html
+++ b/TiddlyWiki.html
@@ -259,6 +259,8 @@ Error message and password prompt
 
 <li>current TODO</li>
 
+<li>current urls</li>
+
 <li>Delavier &amp; spiritualité</li>
 
 <li>dés</li>
@@ -9402,7 +9404,7 @@ Error message and password prompt
 <div created="20190108101211875" modified="20190521145518441" title="$:/state/tab/sidebar--595412856">
 <pre>$:/core/ui/SideBar/More</pre>
 </div>
-<div created="20200224092915949" list="[[Hypnomachie - commentaires]] Home [[current TODO]] pw" modified="20200227151703085" title="$:/StoryList">
+<div created="20200401063230892" list="[[current urls]] Home pw" modified="20200401063230892" title="$:/StoryList">
 <pre></pre>
 </div>
 <div created="20190131165140039" modified="20190131165140039" title="$:/temp/advancedsearch">
@@ -9421,7 +9423,7 @@ Error message and password prompt
         },
         &quot;$:/info/url/full&quot;: {
             &quot;title&quot;: &quot;$:/info/url/full&quot;,
-            &quot;text&quot;: &quot;file:///C:/Users/AY003829/Downloads/PortableGit/lenopgm/notes/TiddlyWiki.html&quot;
+            &quot;text&quot;: &quot;file:///home/osef/T%C3%A9l%C3%A9chargements/TiddlyWiki.html&quot;
         },
         &quot;$:/info/url/host&quot;: {
             &quot;title&quot;: &quot;$:/info/url/host&quot;,
@@ -9441,7 +9443,7 @@ Error message and password prompt
         },
         &quot;$:/info/url/pathname&quot;: {
             &quot;title&quot;: &quot;$:/info/url/pathname&quot;,
-            &quot;text&quot;: &quot;/C:/Users/AY003829/Downloads/PortableGit/lenopgm/notes/TiddlyWiki.html&quot;
+            &quot;text&quot;: &quot;/home/osef/T%C3%A9l%C3%A9chargements/TiddlyWiki.html&quot;
         },
         &quot;$:/info/url/search&quot;: {
             &quot;title&quot;: &quot;$:/info/url/search&quot;,
@@ -9453,11 +9455,11 @@ Error message and password prompt
         },
         &quot;$:/info/browser/screen/width&quot;: {
             &quot;title&quot;: &quot;$:/info/browser/screen/width&quot;,
-            &quot;text&quot;: &quot;1600&quot;
+            &quot;text&quot;: &quot;1920&quot;
         },
         &quot;$:/info/browser/screen/height&quot;: {
             &quot;title&quot;: &quot;$:/info/browser/screen/height&quot;,
-            &quot;text&quot;: &quot;900&quot;
+            &quot;text&quot;: &quot;1080&quot;
         }
     }
 }</pre>
@@ -10241,8 +10243,7 @@ Three Pieces of Silver by Rune Klan (DVD) - unique and difficult coin effects th
 * fax</pre>
 </div>
 <div created="20200224155845585" modified="20200224155956973" tags="hypnomachie" title="confiance : expérience sociale">
-<pre>
-```
+<pre>```
 Une non-expérience a eu lieu dans une crèche expliquant le rôle de la confiance. Je dis non-expérience, car la chose n’a pas été étudiée par des scientifiques, mais a été rapportée par des psychologues sociaux. (Je crois Dan Arielly, enfin bref, peu importe la source).
 Une crèche en avait marre que des parents arrivent systématiquement en retard venir chercher leurs enfants. Comme on va pas mobiliser la police pour un retard de 5-20 minutes, le personnel restait simplement après la fermeture. Et assez systématiquement le personnel faisait donc des heures supplémentaires qu’on aurait bien voulu éviter (une autre solution eut été constater la demande pour des horaires étendus, mais là n’est pas le problème).
 La crèche a alors décidé d’instaurer des amendes pour diminuer ces retards. Que s’est-il passé ? Les retards sont devenus plus fréquents ET leur durée supérieure (la durée moyenne du retard étant passé de moins de 15 minutes à plus de 30 minutes, quelque chose comme ça).
@@ -10557,6 +10558,29 @@ http://liens.howtommy.net/?Be1gEQ
 * https://www.facebook.com/sebastien.villalba1
 * https://www.facebook.com/yawarakani (ninjutsu?)
 * ''https://www.facebook.com/groups/444841635954602/videos/''</pre>
+</div>
+<div created="20200401122838609" modified="20200401123531447" tags="tmp" title="current urls">
+<pre>! services
+* https://entraide.chatons.org/fr/
+* https://sebsauvage.net/wiki/doku.php?id=services_web
+* https://transfer.sh/
+
+! divertissement
+* FP https://www.amazon.fr/s?k=faux+pouce&amp;__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&amp;ref=nb_sb_noss_2
+* DBLp4 https://www.jmcorda.com/fr/dominationbylove?page=4&amp;infos=dbl.x.osef@xoxy.net,5e32d7afd5748,ZjdkMDM0OTliYzU2MDEwOWNlZjVlM2M1NzNkMDZhMjBjMWViOWRlYQ==
+
+! pads:
+* https://annuel.framapad.org/p/leno
+* https://annuel2.framapad.org/p/osefosef
+
+! ellusionists
+* https://track.aftership.com/eshipping/LX751041459US
+* https://www.ellusionist.com/sales/order/view/order_id/696947/
+
+! portable linux apps
+* https://sourceforge.net/projects/portable/files/
+* https://superuser.com/questions/638326/chmod-777-no-effects-on-linux-mint
+* https://askubuntu.com/questions/11840/how-do-i-use-chmod-on-an-ntfs-or-fat32-partition</pre>
 </div>
 <div created="20190529145458196" modified="20190830154142741" tags="spiritualité delavier" title="Delavier &amp; spiritualité">
 <pre>Delavier:
@@ -11282,10 +11306,9 @@ Augustin Barruel - Mémoires pour servir à l'histoire du jacobinisme	https://fr
 * photos ? (big)
 * useful code snippets</pre>
 </div>
-<div created="20190108105358377" modified="20200227104051128" tags="home current" title="Home">
+<div created="20190108105358377" modified="20200401123606065" tags="home current" title="Home">
 <pre>* [[todo DL]]
-* https://mon.nge-nantes.fr/espace/stationnement s.l@y.c 317
-* https://subverti.com/festivals-jeux/festival-jeux-saint-herblain/
+* [[current urls]]
 
 ! Daily
 * https://mail.yahoo.com l.d@y
