--- a/TiddlyWiki.html
+++ b/TiddlyWiki.html
@@ -9404,7 +9404,7 @@ Error message and password prompt
 <div created="20190108101211875" modified="20190521145518441" title="$:/state/tab/sidebar--595412856">
 <pre>$:/core/ui/SideBar/More</pre>
 </div>
-<div created="20200401063230892" list="[[current urls]] Home pw" modified="20200401063230892" title="$:/StoryList">
+<div created="20200509093334254" list="Home pw" modified="20200509093334254" title="$:/StoryList">
 <pre></pre>
 </div>
 <div created="20190131165140039" modified="20190131165140039" title="$:/temp/advancedsearch">
@@ -9423,7 +9423,7 @@ Error message and password prompt
         },
         &quot;$:/info/url/full&quot;: {
             &quot;title&quot;: &quot;$:/info/url/full&quot;,
-            &quot;text&quot;: &quot;file:///home/osef/T%C3%A9l%C3%A9chargements/TiddlyWiki.html&quot;
+            &quot;text&quot;: &quot;file:///home/osef/Bureau/lenopgm/notes/TiddlyWiki.html&quot;
         },
         &quot;$:/info/url/host&quot;: {
             &quot;title&quot;: &quot;$:/info/url/host&quot;,
@@ -9443,7 +9443,7 @@ Error message and password prompt
         },
         &quot;$:/info/url/pathname&quot;: {
             &quot;title&quot;: &quot;$:/info/url/pathname&quot;,
-            &quot;text&quot;: &quot;/home/osef/T%C3%A9l%C3%A9chargements/TiddlyWiki.html&quot;
+            &quot;text&quot;: &quot;/home/osef/Bureau/lenopgm/notes/TiddlyWiki.html&quot;
         },
         &quot;$:/info/url/search&quot;: {
             &quot;title&quot;: &quot;$:/info/url/search&quot;,
@@ -13002,7 +13002,7 @@ La question est : si à l'intérieur de nos yeux se trouve notre système nerveu
 Et si nos yeux servent à capter les particules de lumière, les photons, pour que notre cerveau puisse se fabriquer l'illusion du monde physique, à quoi sert la captation de la lumière par les trous noirs ?
 </pre>
 </div>
-<div created="20190130144059269" modified="20200220121501153" tags="pw" title="pw">
+<div created="20190130144059269" modified="20200509093612759" tags="pw" title="pw">
 <pre>```
 leno.1fr1.nt =&gt; A...n 2/20
 FREEBOX =&gt; 1/20
@@ -13064,6 +13064,12 @@ linkedin =&gt; 1/20
 pluralsight =&gt; s.l.y.c 1/20
 interepargne.natixis.fr =&gt; 14290097 [troll]00
 nantesmetropole.fr	metronantes.s.le@x.n	2/20
+https://formations.emergences.net/products/chaine-privee-gratuite-de-jjc osefosef@grr.la 4/20
+https://club.conjuror.community/member-home/  conjuror.s.le@x.n 4/20 nospec
+http://izy.yo.fr/Salarie/IzyFun/ 20200606103761sa.le@y.c 6BUDX4UL ou 5/20
+https://marketing-underground.teachable.com/ tugan.x.os@x.n 5/20
+https://lumo-france.com/philanthropie/the-shift-project/faire-un-don/choix-du-montant s.le@grla 5/20
+edf.s.le x.n 5/20
 ```
 </pre>
 </div>
